--- a/my_app/templates/my_app/lessons_list.html
+++ b/my_app/templates/my_app/lessons_list.html
@@ -11,7 +11,7 @@
          </div>
    <div>
       <h2>Здравствуй, Пользователь!</h2>
-        <a href="http://127.0.0.1:8000/lesson/new/"> Добавить предмет</a>
+        <a href="http://maba20141.pythonanywhere.com/lesson/new/"> Добавить предмет</a>
          </div>
  <div class="content container">
      <div class="row">
